--- a/Resume.html
+++ b/Resume.html
@@ -587,7 +587,7 @@ IT
   <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img id="tear" src="D:\WEBDEV\html\eyes.jpeg" alt="Teary Eyes">
+      <img id="tear" src="eyes.jpeg" alt="Teary Eyes">
 	   <br>
 	   <center><h3>The Unspoken</h3></center>
     </div>
