--- a/Resume.html
+++ b/Resume.html
@@ -199,7 +199,7 @@ body{
             <div class="col-md-12 ml-auto mr-auto">
                 <div class="myprofile">
                     <div class="avatar">
-                        <img src="https://drive.google.com/file/d/1kAtGwYaMvws4Sfqttfl5BcCwO5b1IWu_/view?usp=sharing" alt="Profile pic" class="custom-logo">               
+                        <img src="Me.jpg" alt="Profile pic" class="custom-logo">               
                     </div>
                     <div class="name">
                         <h1 class='site-title wp-title'>Suvam Patra</h1>
